--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@mui/material": "^5.14.8",
     "@mui/styled-engine-sc": "^5.14.8",
     "@mui/styles": "^5.14.7",
+    "base-64": "^1.0.0",
     "browser-fs-access": "^0.34.1",
     "dompurify": "^3.0.5",
     "lodash": "4.17.21",
+    "node-html-parser": "^7.0.1",
     "prop-types": "^15.8.1",
+    "pure-uuid": "^1.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
