--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "styled-components": "^6.0.7",
-    "usfm-grammar": "^3.0.0",
+    "usfm-grammar-web": "^3.0.0",
     "utf8": "^3.0.0"
   },
   "devDependencies": {
