add more usfm markers - inclusive paragraph handling

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "csv2usj",
+  "name": "csv2usfm",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,13 +18,16 @@
     "@mui/material": "^5.14.8",
     "@mui/styled-engine-sc": "^5.14.8",
     "@mui/styles": "^5.14.7",
+    "@oce-editor-tools/mui-core": "^0.1.30",
     "base-64": "^1.0.0",
     "browser-fs-access": "^0.34.1",
     "dompurify": "^3.0.5",
+    "epitelete-html": "0.2.20-beta.8",
     "lodash": "4.17.21",
     "node-html-parser": "^7.0.1",
     "papaparse": "^5.5.2",
     "prop-types": "^15.8.1",
+    "proskomma-core": "^0.10.15",
     "pure-uuid": "^1.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
