iterate through all Bible books

--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@mui/styled-engine-sc": "^5.14.8",
     "@mui/styles": "^5.14.7",
     "@oce-editor-tools/mui-core": "^0.1.30",
+    "@zip.js/zip.js": "^2.7.60",
     "base-64": "^1.0.0",
     "browser-fs-access": "^0.34.1",
     "dompurify": "^3.0.5",
     "epitelete-html": "0.2.20-beta.8",
+    "jszip": "^3.10.1",
     "lodash": "4.17.21",
     "node-html-parser": "^7.0.1",
     "papaparse": "^5.5.2",
